# sandbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yaml  cd.yaml  check-semver.yaml  cli_release.yaml  fast-forward-merge.yaml  pr-comment-test.yaml  production-release.yaml
cli/: go.mod  main.go
helm/charts/sandbox/: Chart.yaml  values.yaml
helm/charts/sandbox/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
sandbox/: app.py
